--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>HELLO!!!!</title>
 </head>
 <body>
-
+    <div class="btn-group" role="group" aria-label="...">
+        <button type="button" class="btn btn-default">Left</button>
+        <button type="button" class="btn btn-default">Middle</button>
+        <button type="button" class="btn btn-default">Right</button>
+    </div>
 </body>
 </html>
