--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <ul class="nav nav-pills">
         <li role="presentation" class="active"><a href="#">Home</a></li>
-        <li role="presentation"><a href="#">Profile</a></li>
+        <li role="presentation"><a href="#">Two</a></li>
         <li role="presentation"><a href="#">Messages</a></li>
     </ul>
 </body>
