--- a/projects.html
+++ b/projects.html
@@ -3,13 +3,13 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>About - Patrick Dahlke</title>
+    <title>Projects</title>
 </head>
 <body>
     <ul class="nav nav-pills">
         <li role="presentation"><a href="index.html">Home</a></li>
-        <li role="presentation" class="active"><a href="about.html">About</a></li>
-        <li role="presentation"><a href="projects.html">Projects</a></li>
+        <li role="presentation"><a href="about.html">About</a></li>
+        <li role="presentation" class="active"><a href="projects.html">Projects</a></li>
         <li role="presentation"><a href="skills.html">Skills</a></li>
     </ul>
 </body>
