--- a/Index.html
+++ b/Index.html
@@ -3,16 +3,15 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Patrick Dahlke!!!!</title>
+    <title>Patrick Dahlke</title>
     <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
     <ul class="nav nav-pills">
         <li role="presentation" class="active"><a href="index.html">Home</a></li>
         <li role="presentation"><a href="about.html">About</a></li>
-        <li role="presentation"><a href="#">Projects</a></li>
-        <li role="presentation"><a href="#">Skill Sets</a></li>
-        <li role="presentation"><a href="#"></a></li>
+        <li role="presentation"><a href="projects.html">Projects</a></li>
+        <li role="presentation"><a href="skills.html">Skills</a></li>
     </ul>
 </body>
 </html>
