--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>About - Patrick Dahlke</title>
+    <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
     <ul class="nav nav-pills">
