--- a/Index.html
+++ b/Index.html
@@ -13,5 +13,8 @@
         <li role="presentation"><a href="projects.html">Projects</a></li>
         <li role="presentation"><a href="skills.html">Skills</a></li>
     </ul>
+
+    <img src="https://twitter.com/PatrickDahlke/photo" alt="Head Shot" class="img-rounded">
+
 </body>
 </html>
