--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
         <li role="presentation"><a href="skills.html">Skills</a></li>
     </ul>
 
+    <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFMs4y4SSqK-g/profile-displayphoto-shrink_200_200/0/1587335641676?e=1624492800&v=beta&t=bqdoU4UXJhprhQjqImZ_wkiithDIR04ii6XqDHMSLUg" alt="Head Shot" class="img-rounded">
+
 </body>
 </html>
