--- a/Index.html
+++ b/Index.html
@@ -13,8 +13,12 @@
         <li role="presentation"><a href="projects.html">Projects</a></li>
         <li role="presentation"><a href="skills.html">Skills</a></li>
     </ul>
-
-    <img src="https://twitter.com/PatrickDahlke/photo" alt="Head Shot" class="img-rounded">
+    <div class="jumbotron">
+        <h1>Hello, world!</h1>
+        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFMs4y4SSqK-g/profile-displayphoto-shrink_200_200/0/1587335641676?e=1624492800&v=beta&t=bqdoU4UXJhprhQjqImZ_wkiithDIR04ii6XqDHMSLUg" alt="Head Shot" class="img-rounded">
+        <p>...</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+    </div>
 
 </body>
 </html>
