--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         <li role="presentation"><a href="projects.html">Projects</a></li>
         <li role="presentation"><a href="skills.html">Skills</a></li>
     </ul>
-
-    <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFMs4y4SSqK-g/profile-displayphoto-shrink_200_200/0/1587335641676?e=1624492800&v=beta&t=bqdoU4UXJhprhQjqImZ_wkiithDIR04ii6XqDHMSLUg" alt="Head Shot" class="img-rounded">
+    <div class="jumbotron">
+        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFMs4y4SSqK-g/profile-displayphoto-shrink_200_200/0/1587335641676?e=1624492800&v=beta&t=bqdoU4UXJhprhQjqImZ_wkiithDIR04ii6XqDHMSLUg" alt="Head Shot" class="img-rounded">
+        <h1>Hello and welcome to my personal website!</h1>
+        <h2>This was created for a MIS 3033 homework assignment, but you'll still learn a little bit about me if you look around.</h2>
+    </div>
 
 </body>
 </html>
