--- a/Index.html
+++ b/Index.html
@@ -14,10 +14,10 @@
         <li role="presentation"><a href="skills.html">Skills</a></li>
     </ul>
     <div class="jumbotron">
-        <h1>Hello, world!</h1>
         <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFMs4y4SSqK-g/profile-displayphoto-shrink_200_200/0/1587335641676?e=1624492800&v=beta&t=bqdoU4UXJhprhQjqImZ_wkiithDIR04ii6XqDHMSLUg" alt="Head Shot" class="img-rounded">
-        <p>...</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        <h1>Hello and welcome to my personal website!</h1>
+        <h2>This was created for a MIS 3033 homework assignment, but you'll still learn a little bit about me if you look around.</h2>
+        <p>...seriously, feel free to look around. It wont bite.</p>
     </div>
 
 </body>
