--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <div class="media">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" src="http://www.gannett-cdn.com/-mm-/972aaecb96a219b4183e29545f79c286ce5c48dd/c=0-79-4977-2891&r=x1683&c=3200x1680/local/-/media/2016/12/07/USATODAY/USATODAY/636167167469487523-AP-Trump-Deficit.jpg" alt="government building">
+                <img class="img-rounded" src="http://www.gannett-cdn.com/-mm-/972aaecb96a219b4183e29545f79c286ce5c48dd/c=0-79-4977-2891&r=x1683&c=3200x1680/local/-/media/2016/12/07/USATODAY/USATODAY/636167167469487523-AP-Trump-Deficit.jpg" alt="government building">
             </a>
         </div>
         <div class="media-body">
