--- a/about.html
+++ b/about.html
@@ -17,8 +17,7 @@
     <div class="media">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" src="http://www.gannett-cdn.com/-mm-/972aaecb96a219b4183e29545f79c286ce5c48dd/c=0-79-4977-2891&r=x1683&c=3200x1680/local/-/media/2016/12/07/USATODAY/USATODAY/636167167469487523-AP-Trump-Deficit.jpg" alt="government building">
-            </a>
+                <img src="https://th.bing.com/th/id/Rbd84b330f970c5cbf9c3dba6b8c2ee9d?rik=i8O11FRLB4h7%2bw&riu=http%3a%2f%2fwww.gannett-cdn.com%2f-mm-%2f972aaecb96a219b4183e29545f79c286ce5c48dd%2fc%3d0-79-4977-2891%26r%3dx1683%26c%3d3200x1680%2flocal%2f-%2fmedia%2f2016%2f12%2f07%2fUSATODAY%2fUSATODAY%2f636167167469487523-AP-Trump-Deficit.jpg&ehk=9Qk96K7KKk001UTWR3Ejp3bS2MWChN7Vz6Tc9%2bCZZ90%3d&risl=&pid=ImgRaw" alt="Head Shot" class="img-rounded">            </a>
         </div>
         <div class="media-body">
             <h4 class="media-heading">Government</h4>
