--- a/about.html
+++ b/about.html
@@ -16,9 +16,11 @@
 
     <div class="media">
         <div class="media-left">
-            <a href="#">
-                <img class="media-object" src="https://th.bing.com/th/id/R92d86bf7454a67161208881818a570b7?rik=VkqLH7Pl8tYQFg&pid=ImgRaw" alt="...">
-            </a>
+            <div class="imgsize">
+                <a href="#">
+                    <img class="media-object" src="https://th.bing.com/th/id/R92d86bf7454a67161208881818a570b7?rik=VkqLH7Pl8tYQFg&pid=ImgRaw" alt="...">
+                </a>
+            </div>
         </div>
         <div class="media-body">
             <h4 class="media-heading">Media heading</h4>
