--- a/about.html
+++ b/about.html
@@ -16,11 +16,9 @@
 
     <div class="media">
         <div class="media-left">
-            <div class="imgsize">
-                <a href="#">
-                    <img class="media-object" src="https://th.bing.com/th/id/R92d86bf7454a67161208881818a570b7?rik=VkqLH7Pl8tYQFg&pid=ImgRaw" alt="...">
-                </a>
-            </div>
+            <a href="#">
+                <img class="media-object" style="width:250px" src="https://th.bing.com/th/id/R92d86bf7454a67161208881818a570b7?rik=VkqLH7Pl8tYQFg&pid=ImgRaw" alt="...">
+            </a>
         </div>
         <div class="media-body">
             <h4 class="media-heading">Media heading</h4>
