--- a/about.html
+++ b/about.html
@@ -17,12 +17,12 @@
     <div class="media">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" style="block-size:20px,20px" src="https://th.bing.com/th/id/R92d86bf7454a67161208881818a570b7?rik=VkqLH7Pl8tYQFg&pid=ImgRaw" alt="...">
+                <img class="media-object" style="block-size:30px,30px" src="https://th.bing.com/th/id/R92d86bf7454a67161208881818a570b7?rik=VkqLH7Pl8tYQFg&pid=ImgRaw" alt="...">
             </a>
         </div>
         <div class="media-body">
-            <h4 class="media-heading">Media heading</h4>
-            ...
+            <h4 class="media-heading">Government</h4>
+            <p> Test123</p>
         </div>
     </div>
 
