--- a/about.html
+++ b/about.html
@@ -17,11 +17,12 @@
     <div class="media">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" style="block-size:30px,30px" src="https://th.bing.com/th/id/R92d86bf7454a67161208881818a570b7?rik=VkqLH7Pl8tYQFg&pid=ImgRaw" alt="...">
+                <img class="media-object" style="block-size:10%,10%" src="https://th.bing.com/th/id/R92d86bf7454a67161208881818a570b7?rik=VkqLH7Pl8tYQFg&pid=ImgRaw" alt="...">
             </a>
         </div>
         <div class="media-body">
-            <h4 class="media-heading">Government</h4>
+            <h3 class="media-heading">Government</h3>
+            <h4> I am very well versed with government structues and how to navigate several different forms of bureaucracy. I have taken classes on public administration, the criminal/legal system, and transnational poltics.</h4>
         </div>
     </div>
 
