--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <div class="media">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" style="block-size:10%,10%" src="https://th.bing.com/th/id/R92d86bf7454a67161208881818a570b7?rik=VkqLH7Pl8tYQFg&pid=ImgRaw" alt="...">
+                <img class="media-object" style="block-size:22px,22px" src="https://th.bing.com/th/id/R92d86bf7454a67161208881818a570b7?rik=VkqLH7Pl8tYQFg&pid=ImgRaw" alt="...">
             </a>
         </div>
         <div class="media-body">
