--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         </div>
         <div class="media-body">
             <h3 class="media-heading">Government</h3>
-            <h4> I am very well versed with government structues and how to navigate several different forms of bureaucracy. I have taken classes on public administration, the criminal/legal system, and transnational poltics.</h4>
+            <h4> I am very well versed with government structues and how to navigate several different forms of bureaucracy. I have taken classes on public administration, the criminal/legal system, and transnational politics.</h4>
         </div>
     </div>
 
