--- a/about.html
+++ b/about.html
@@ -21,11 +21,22 @@
             </a>
         </div>
         <div class="media-body">
+            <h1 class="media-heading">Government</h1>
+            <h3> I am very well versed with government structues and how to navigate several different forms of bureaucracy. I have taken classes on public administration, the criminal/legal system, and transnational politics.</h3>
+        </div>
+    </div>
+
+    <div class="media">
+        <div class="media-left">
+            <a href="#">
+                <img class="media-object" style="block-size:22px,22px" src="https://th.bing.com/th/id/R92d86bf7454a67161208881818a570b7?rik=VkqLH7Pl8tYQFg&pid=ImgRaw" alt="...">
+            </a>
+        </div>
+        <div class="media-body">
             <h3 class="media-heading">Government</h3>
             <h4> I am very well versed with government structues and how to navigate several different forms of bureaucracy. I have taken classes on public administration, the criminal/legal system, and transnational politics.</h4>
         </div>
     </div>
-
 
 </body>
 </html>
