--- a/about.html
+++ b/about.html
@@ -21,20 +21,20 @@
             </a>
         </div>
         <div class="media-body">
-            <h1 class="media-heading">Government</h1>
-            <h3> I am very well versed with government structues and how to navigate several different forms of bureaucracy. I have taken classes on public administration, the criminal/legal system, and transnational politics.</h3>
+            <h2 class="media-heading">Government</h2>
+            <h4>I am very well versed with government structues and how to navigate several different forms of bureaucracy. I have taken classes on public administration, the criminal/legal system, and transnational politics.</h4>
         </div>
     </div>
 
     <div class="media">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" style="block-size:22px,22px" src="https://th.bing.com/th/id/R92d86bf7454a67161208881818a570b7?rik=VkqLH7Pl8tYQFg&pid=ImgRaw" alt="...">
+                <img class="media-object" style="max-width:150px" src="https://th.bing.com/th/id/R360757c5e3e72a98bf5da1a9c176fa8f?rik=IktPzaWaR5fXQw&pid=ImgRaw" alt="...">
             </a>
         </div>
         <div class="media-body">
-            <h3 class="media-heading">Government</h3>
-            <h4> I am very well versed with government structues and how to navigate several different forms of bureaucracy. I have taken classes on public administration, the criminal/legal system, and transnational politics.</h4>
+            <h2 class="media-heading">Analytics</h2>
+            <h4>I am also a very analytical person who looks at all the data and information available before making decisions in my academic, professional, and personal life. Along with the numbers side of analytics, I know how to follow someones logic and views and use that to my phrase how I might want communicate or respond to them.</h4>
         </div>
     </div>
 
