--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <div class="media">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" style="max-width:100px" src="https://th.bing.com/th/id/R92d86bf7454a67161208881818a570b7?rik=VkqLH7Pl8tYQFg&pid=ImgRaw" alt="...">
+                <img class="media-object" style="max-width:100px" src="govt.jpg" alt="...">
             </a>
         </div>
         <div class="media-body">
@@ -29,7 +29,7 @@
     <div class="media">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" style="max-width:100px" src="https://th.bing.com/th/id/R360757c5e3e72a98bf5da1a9c176fa8f?rik=IktPzaWaR5fXQw&pid=ImgRaw" alt="...">
+                <img class="media-object" style="max-width:100px" src="Analytics.jpg" alt="...">
             </a>
         </div>
         <div class="media-body">
@@ -41,7 +41,7 @@
     <div class="media">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" style="max-width:100px" src="Analytics.jpg" alt="...">
+                <img class="media-object" style="max-width:100px" src="" alt="...">
             </a>
         </div>
         <div class="media-body">
