--- a/about.html
+++ b/about.html
@@ -34,19 +34,19 @@
         </div>
         <div class="media-body">
             <h2 class="media-heading">Analytics</h2>
-            <h4>I am also a very analytical person who looks at all the data and information available before making decisions in my academic, professional, and personal life. Along with the numbers side of analytics, I know how to follow someones logic and views and use that to my phrase how I might want communicate or respond to them.</h4>
+            <h4>I am also a very analytical person who looks at all the data and information available before making decisions in my academic, professional, and personal life. On top of the numbers side of analytics, I know how to follow someone's logic and views and use that to my phrase how I might want communicate or respond to them.</h4>
         </div>
     </div>
 
     <div class="media">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" style="max-width:100px" src="" alt="...">
+                <img class="media-object" style="max-width:150px" src="People.jpg" alt="...">
             </a>
         </div>
         <div class="media-body">
-            <h2 class="media-heading">Analytics</h2>
-            <h4>I am also a very analytical person who looks at all the data and information available before making decisions in my academic, professional, and personal life. Along with the numbers side of analytics, I know how to follow someones logic and views and use that to my phrase how I might want communicate or respond to them.</h4>
+            <h2 class="media-heading">People</h2>
+            <h4>Along with govnerment and analytics, I am also interested in people as a whole. This includes how people view and interact with govnerment, using data to understand how people behave and think, and learning from peoples lived exerperiences.</h4>
         </div>
     </div>
 
