--- a/projects.html
+++ b/projects.html
@@ -13,5 +13,19 @@
         <li role="presentation" class="active"><a href="projects.html">Projects</a></li>
         <li role="presentation"><a href="skills.html">Skills</a></li>
     </ul>
+
+    <div class="list-group">
+        <a href="#" class="list-group-item active">
+            <h4 class="list-group-item-heading">List group item heading</h4>
+            <p class="list-group-item-text">...</p>
+        </a>
+    </div>
+
+    <div class="list-group">
+        <a href="#" class="list-group-item active">
+            <h4 class="list-group-item-heading">List group item heading</h4>
+            <p class="list-group-item-text">...</p>
+        </a>
+    </div>
 </body>
 </html>
