--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <li role="presentation"><a href="projects.html">Projects</a></li>
         <li role="presentation"><a href="skills.html">Skills</a></li>
     </ul>
-    <h1>Other areas I am interested in besdies technology</h1>
+    <h1>Other Interests:</h1>
     <div class="media">
         <div class="media-left">
             <a href="#">
