--- a/projects.html
+++ b/projects.html
@@ -15,10 +15,8 @@
     </ul>
 
     <div class="list-group">
-        <a href="#" class="list-group-item active">
-            <h4 class="list-group-item-heading">List group item heading</h4>
-            <p class="list-group-item-text">...</p>
-        </a>
+            <h4 class="list-group-item-heading">Databases</h4>
+            <p class="list-group-item-text">This class was primarily a group project that consisted of creating a databse from a case brief. Our group designed and implemented a full database using multiple business cycles that fit all needs of the case company.</p>
     </div>
 
     <div class="list-group">
