--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         </div>
         <div class="media-body">
             <h2 class="media-heading">Government</h2>
-            <h4>I am very well versed with government structues and how to navigate several different forms of bureaucracy. I have taken classes on public administration, the criminal/legal system, and transnational politics.</h4>
+            <h4>I am well versed with government structues and how to navigate several different forms of bureaucracy. I have taken classes on public administration, the criminal/legal system, and transnational politics.</h4>
         </div>
     </div>
 
@@ -46,7 +46,7 @@
         </div>
         <div class="media-body">
             <h2 class="media-heading">People</h2>
-            <h4>Along with govnerment and analytics, I am also interested in people as a whole. This includes how people view and interact with govnerment, using data to understand how people behave and think, and learning from peoples lived exerperiences.</h4>
+            <h4>Along with govnerment and analytics, I am also interested in people as a whole. This includes how people view and interact with govnerment, using public opinion data to understand how people behave and think, and learning from others lived exerperiences.</h4>
         </div>
     </div>
 
