--- a/projects.html
+++ b/projects.html
@@ -15,8 +15,18 @@
     </ul>
 
     <div class="list-group">
-            <h4 class="list-group-item-heading">Databases</h4>
-            <p class="list-group-item-text">This class was primarily a group project that consisted of creating a databse from a case brief. Our group designed and implemented a full database using multiple business cycles that fit all needs of the case company.</p>
+        <a href="#" class="list-group-item active">
+            <h3 class="list-group-item-heading">Databases</h3>
+            <h4 class="list-group-item-text">This class was primarily a group project that consisted of creating a databse from a case brief. Our group designed and implemented a full database using multiple business cycles that fit all needs of the case company.</h4>
+        </a>
+        <a href="#" class="list-group-item active">
+            <h3 class="list-group-item-heading"></h3>
+            <h4 class="list-group-item-text"></h4>
+        </a>
+        <a href="#" class="list-group-item active">
+            <h3 class="list-group-item-heading"></h3>
+            <h4 class="list-group-item-text"></h4>
+        </a>
     </div>
 
     <div class="list-group">
