--- a/projects.html
+++ b/projects.html
@@ -14,21 +14,60 @@
         <li role="presentation"><a href="skills.html">Skills</a></li>
     </ul>
 
+    <h1>Projects & Papers</h1>
+
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">Databases</h3>
+            <h2 class="panel-title">MIS Field Project</h2>
         </div>
         <div class="panel-body">
-            This class was primarily a group project that consisted of creating a databse from a case brief. Our group designed and implemented a full database using multiple business cycles that fit all needs of the case company.
+            Group Project One: Created a COVID-19 vaccination process with a Simul8 simulation to fully vaccinate the city of Norman within 13 weeks.
+            Group Project Two: Consulted Norman Regional Hospital on how to impliment the Medicare "Hospital at Home" service effectively.
         </div>
     </div>
 
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">Panel title</h3>
+            <h2 class="panel-title">Databases</h2>
         </div>
         <div class="panel-body">
-            Panel content
+            A group project that consisted of creating a databse from a case brief. We designed and implemented a full database using multiple business cycles that fit all the needs of the case company.
+        </div>
+    </div>
+
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-title">Intro to Business Analytics</h2>
+        </div>
+        <div class="panel-body">
+            A group project that was based in Microsoft Excel. Another student and I created an excel enviroment for a business to plan events with COVID-19 protocols.
+        </div>
+    </div>'
+
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-title">Programming</h2>
+        </div>
+        <div class="panel-body">
+            A project based class where a majority of the grade was based on actual software development inluding projects like this website.
+        </div>
+    </div>
+
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-title">Politics of Criminal Justice</h2>
+        </div>
+        <div class="panel-body">
+            A mock SCOTUS decision determining indigence and the right to a court appointed attorney based on precedent and actual SCOTUS rullings.
+        </div>
+    </div>
+
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-title">Law, Courts, and Social Change</h2>
+        </div>
+        <div class="panel-body">
+            A research paper recommending reforms to various parts of the legal system to better improve justice for victims of sexual assult and rape.
         </div>
     </div>
 </body>
