--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,17 @@
             <h2 class="panel-title">MIS Field Project</h2>
         </div>
         <div class="panel-body">
-            Group Project One: Created a COVID-19 vaccination process with a Simul8 simulation to fully vaccinate the city of Norman within 13 weeks.
-            Group Project Two: Consulted Norman Regional Hospital on how to impliment the Medicare "Hospital at Home" service effectively.
+            Project 1: Created a COVID-19 vaccination process with a Simul8 simulation to fully vaccinate the city of Norman within 13 weeks.
+            Project 2: Consulted Norman Regional Hospital on how to impliment the Medicare "Hospital at Home" service effectively.
+        </div>
+    </div>
+
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-title">Senior Capstone</h2>
+        </div>
+        <div class="panel-body">
+            A formal report that analyzed a real company brief and offered strategic analysis using advanced business principals.
         </div>
     </div>
 
@@ -42,14 +51,14 @@
         <div class="panel-body">
             A group project that was based in Microsoft Excel. Another student and I created an excel enviroment for a business to plan events with COVID-19 protocols.
         </div>
-    </div>'
+    </div>
 
     <div class="panel panel-default">
         <div class="panel-heading">
             <h2 class="panel-title">Programming</h2>
         </div>
         <div class="panel-body">
-            A project based class where a majority of the grade was based on actual software development inluding projects like this website.
+            A project based class where a majority of the grade was determined from actual software development inluding projects like this website.
         </div>
     </div>
 
