--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 
     <h1>Projects & Papers</h1>
 
-    <div class="panel panel-default">
+    <div class="panel panel-info">
         <div class="panel-heading">
             <h2 class="panel-title">MIS Field Project</h2>
         </div>
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <div class="panel panel-default">
+    <div class="panel panel-warning">
         <div class="panel-heading">
             <h2 class="panel-title">Senior Capstone</h2>
         </div>
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <div class="panel panel-default">
+    <div class="panel panel-info">
         <div class="panel-heading">
             <h2 class="panel-title">Databases</h2>
         </div>
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <div class="panel panel-default">
+    <div class="panel panel-warning">
         <div class="panel-heading">
             <h2 class="panel-title">Intro to Business Analytics</h2>
         </div>
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <div class="panel panel-default">
+    <div class="panel panel-info">
         <div class="panel-heading">
             <h2 class="panel-title">Programming</h2>
         </div>
@@ -62,7 +62,7 @@
         </div>
     </div>
 
-    <div class="panel panel-default">
+    <div class="panel panel-warning">
         <div class="panel-heading">
             <h2 class="panel-title">Politics of Criminal Justice</h2>
         </div>
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <div class="panel panel-default">
+    <div class="panel panel-info">
         <div class="panel-heading">
             <h2 class="panel-title">Law, Courts, and Social Change</h2>
         </div>
