--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,22 @@
         <li role="presentation"><a href="index.html">Home</a></li>
         <li role="presentation"><a href="about.html">About</a></li>
         <li role="presentation"><a href="projects.html">Projects</a></li>
-        <li role="presentation"  class="active"><a href="skills.html">Skills</a></li>
+        <li role="presentation" class="active"><a href="skills.html">Skills</a></li>
     </ul>
+    <h1>Skills</h1>
+    <h2>Languages & Databases</h2>
+    <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-info">C#</a>
+        <a href="#" class="list-group-item list-group-item-warning">SQL</a>
+        <a href="#" class="list-group-item list-group-item-info">VBA</a>
+        <a href="#" class="list-group-item list-group-item-warning">R</a>
+    </div>
+    <h2>Software & Tools</h2>
+    <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-info">SAP</a>
+        <a href="#" class="list-group-item list-group-item-warning">SalesForce</a>
+        <a href="#" class="list-group-item list-group-item-info">Simul8</a>
+        <a href="#" class="list-group-item list-group-item-warning">RStudio</a>
+    </div>
 </body>
 </html>
