--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         </div>
         <div class="media-body">
             <h2 class="media-heading">Analytics</h2>
-            <h4>I am also a very analytical person who looks at all the data and information available before making decisions in my academic, professional, and personal life. On top of the numbers side of analytics, I know how to follow someone's logic and views and use that to my phrase how I might want communicate or respond to them.</h4>
+            <h4>I am also a very analytical person who looks at all the data and information available before making decisions in my academic, professional, and personal life. On top of the numbers side of analytics, I know how to follow someone's logic and views and use that to alter how I communicate or respond to them.</h4>
         </div>
     </div>
 
@@ -46,7 +46,7 @@
         </div>
         <div class="media-body">
             <h2 class="media-heading">People</h2>
-            <h4>Along with govnerment and analytics, I am also interested in people as a whole. This includes how people view and interact with govnerment, using public opinion data to understand how people behave and think, and learning from others lived exerperiences.</h4>
+            <h4>Along with govnerment and analytics, I am also interested in people as a whole. This includes how people view and interact with govnerment, using public opinion data to understand how people behave and think, and learning from others' lived exerperiences.</h4>
         </div>
     </div>
 
