--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
         </div>
         <div class="panel-body">
             Project 1: Created a COVID-19 vaccination process with a Simul8 simulation to fully vaccinate the city of Norman within 13 weeks.
-            Project 2: Consulted Norman Regional Hospital on how to impliment the Medicare "Hospital at Home" service effectively.
+            Project 2: Consulted Norman Regional Hospital on how to implement the Medicare "Hospital at Home" service effectively.
         </div>
     </div>
 
@@ -31,7 +31,7 @@
             <h2 class="panel-title">Senior Capstone</h2>
         </div>
         <div class="panel-body">
-            A formal report that analyzed a real company brief and offered strategic analysis using advanced business principals.
+            A formal report that analyzed a real company brief and offered strategic analysis using advanced business principles.
         </div>
     </div>
 
@@ -40,7 +40,7 @@
             <h2 class="panel-title">Databases</h2>
         </div>
         <div class="panel-body">
-            A group project that consisted of creating a databse from a case brief. We designed and implemented a full database using multiple business cycles that fit all the needs of the case company.
+            A group project that consisted of creating a databse from a case brief. We designed and implemented a full database using multiple business cycles that fit the needs of the case company.
         </div>
     </div>
 
@@ -49,7 +49,7 @@
             <h2 class="panel-title">Intro to Business Analytics</h2>
         </div>
         <div class="panel-body">
-            A group project that was based in Microsoft Excel. Another student and I created an excel enviroment for a business to plan events with COVID-19 protocols.
+            A group project that was based in Microsoft Excel. Another student and I created an Excel enviroment for a business to plan events with COVID-19 protocols.
         </div>
     </div>
 
