--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         </div>
         <div class="media-body">
             <h2 class="media-heading">People</h2>
-            <h4>Along with govnerment and analytics, I am also interested in people as a whole. This includes how people view and interact with govnerment, using public opinion data to understand how people behave and think, and learning from others' lived exerperiences.</h4>
+            <h4>Along with government and analytics, I am also interested in people as a whole. This includes how people view and interact with govnerment, using public opinion data to understand how people behave and think, and learning from others' lived exerperiences.</h4>
         </div>
     </div>
 
