--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="jumbotron">
         <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFMs4y4SSqK-g/profile-displayphoto-shrink_200_200/0/1587335641676?e=1624492800&v=beta&t=bqdoU4UXJhprhQjqImZ_wkiithDIR04ii6XqDHMSLUg" alt="Head Shot" class="img-rounded">
         <h2>Patrick Dahlke</h2>
-        <h3>I am a senior Managment Information Systems student at the University of Oklahoma. Here you will find more information about me.</h3>
+        <h3>I am a senior Managment Information Systems student at the University of Oklahoma. Click around to discover more information about me.</h3>
     </div>
 
 </body>
